# qwen-code-config

./: .hgignore  Cargo.toml  Justfile  LICENSE.txt  README.md  TODO.md  tauri.conf.json  tauri.linux.conf.json
capabilities/: default.json
frontend/: api.js  domFields.js  envConfig.js  fastModel.js  host.js  index.html  main.js  mcpConfig.js  modelConfig.js  modelInspector.js  modelReorder.js  providerWorkbench.js  shared.js  styles.css  utils.js
icons/: icon.icns  original.jxl
src/: backup.rs  catalog.rs  main.rs  models.rs  paths.rs  ui_state.rs
src/app/: commands.rs  menu.rs  mod.rs  open_files.rs
src/settings/: env.rs  fast_model.rs  json.rs  mcp.rs  mod.rs  model_editing.rs  options.rs  snapshot.rs
src/types/: app.rs  commands.rs  domain.rs  mod.rs  ui.rs
