[package]
name = "qwen-code-config"
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
toml = "0.8"
ureq = { version = "2", features = ["json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
